# Cards

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  client.py  constants.py  docker-compose.yml  entrypoint.sh  models.py  server.py
migrations/: 001_create_users_table.sql  002_create_admins_table.sql
src/: client.rs  config.rs  constants.rs  enums.rs  errors.rs  game.rs  main.rs  models.rs  prelude.rs  tcp_messenger.rs  types.rs
src/api/: auth.rs  games.rs  handlers.rs  middleware.rs  mod.rs  models.rs
src/api/admin/: mod.rs  users.rs
src/auth/: handlers.rs  mod.rs  models.rs  password.rs  token.rs  validators.rs
src/config/: constants.rs  mod.rs  models.rs  settings.rs
src/core/: extensions.rs  game.rs  mod.rs  registry.rs  types.rs
src/database/: connection.rs  mod.rs  user_repository.rs
src/database/models/: admin.rs  mod.rs  user.rs
src/database/repositories/: admin_repository.rs  mod.rs  user_repository.rs
src/errors/: game_errors.rs  mod.rs
src/games/: game.rs  mod.rs  qafoon.rs
src/games/common/: cards.rs  constants.rs  mod.rs  player_input.rs  shuffler.rs
src/games/qafoon/: game.rs  mod.rs  models.rs
src/macros/: mod.rs
src/models/: card.rs  enums.rs  ground.rs  message.rs  mod.rs  player.rs  session.rs  team.rs
src/network/: handlers.rs  mod.rs  protocol.rs  tls.rs
src/utils/: assets.rs  game_registry.rs  mod.rs  shuffler.rs
