[package]
name = "Cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
dotenv = "0.15.0"
futures = "0.3.31"
itertools = "0.14.0"
once_cell = "1.21.3"
rand = "0.9.1"
rcgen = { version = "0.14.2", optional = true }
rmp-serde = "1.3.0"
rustls = { version = "0.23.29", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false }
uuid = { version = "1.16.0", features = ["v4"] }

[features]
default = []
dev-certs = ["rcgen"]
