[package]
name = "Cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
dotenv = "0.15.0"
futures = "0.3.31"
itertools = "0.14.0"
once_cell = "1.21.3"
rand = "0.9.1"
rcgen = { version = "0.14.2", optional = true }
rmp-serde = "1.3.0"
rustls = { version = "0.23.29", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
bcrypt = "0.17.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }
axum = "0.8.4"
serde_json = "1.0.141"
jsonwebtoken = "9.3.1"

[features]
default = []
dev-certs = ["rcgen"]
